--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -7,8 +7,8 @@
   </div>
 
   <div class ="field">
-    <%= f.label :comment %><br>
-    <%= f.text_field :comment %>
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
   </div>
 
   <div class="actions">
