--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,12 @@
     <% end %>
 <%= yield %>
 
-    <p class="userinfo">
-      <% if current_user %>
-        Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+<p class="userinfo">
+    <% if current_user %>
+      Signed in as <%= current_user.first_Name %> //
+      <%= link_to "Log Out", logout_path, :method => :delete %>
       <% else %>
-        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+      <%= link_to "Log in", new_session_path %> or <%= link_to "Sign Up", new_user_path %>
       <% end %>
     </p>
 </body>
