--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,7 +5,8 @@
 
 <div class="bookmark-list">
   <% @bookmarks.each do |bookmark| %>
-    <!-- <p><%= bookmark.url %></p> -->
+
+    <p>Posted by: <%= bookmark.user.first_Name %></p>
     <p><a href="<%= bookmark.url %>" target="_blank"><%= bookmark.title %></a></p>
 
   <p><a href="<%= bookmark.url %>" target="_blank"><img src="<%= bookmark.image %>"></a></p>
