--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <nav>
-Sauce!
+<div class="sauce-title">Sauce!</div>
   <p class="userinfo">
     <% if current_user %>
       Signed in as <%= current_user.first_Name %> //
