--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="forms">
 <div class="login-form">
 
   <h1>Create a new list</h1>
@@ -23,4 +23,5 @@
 
     <% end %>
 
+</div>
 </div>
