--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,16 +1,17 @@
 
-<div class="bookmark-form">
+<div class="forms">
   <%= render 'bookmarks/form' %>
 </div>
-<div class="login-form">
+  <div class="login-form">
 
-<div class="bookmark-list">
-  <% @bookmarks.each do |bookmark| %>
+  <div class="bookmark-list">
+    <% @bookmarks.each do |bookmark| %>
 
-    <p>Posted by: <%= bookmark.user.first_Name %></p>
-    <p><a href="<%= bookmark.url %>" target="_blank"><%= bookmark.title %></a></p>
+      <p>Posted by: <%= bookmark.user.first_Name %></p>
+      <p><a href="<%= bookmark.url %>" target="_blank"><%= bookmark.title %></a></p>
 
-  <p><a href="<%= bookmark.url %>" target="_blank"><img src="<%= bookmark.image %>"></a></p>
-    <p><%= bookmark.summary %></p>
-  <% end %>
+    <p><a href="<%= bookmark.url %>" target="_blank"><img src="<%= bookmark.image %>"></a></p>
+      <p><%= bookmark.summary %></p>
+    <% end %>
+  </div>
 </div>
