--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,13 +30,14 @@ border-bottom: 1px solid black;
   text-align: center;
   font-size: 30px;
   font-style: italic;
+  font-family: 'Raleway', sans-serif;
 }
 
 .userinfo {
 
 text-align: center;
 font-size: 20px;
-font-family: "Arial"
+font-family: 'Raleway', sans-serif;
 
 }
 
@@ -44,6 +45,7 @@ font-family: "Arial"
 
 text-align: center;
 padding-top: 30px;
+font-family: 'Raleway', sans-serif;
 
 
 }
@@ -51,16 +53,24 @@ padding-top: 30px;
 .bookmark-list {
 padding-top: 30px;
 text-align: center;
+font-family: 'Raleway', sans-serif;
+
+}
+
+.each-bookmark {
+
+
 }
 
 .forms {
 padding-top: 30px;
 text-align: center;
 font-size: 16px;
-font-family: "Arial"
+font-family: 'Raleway', sans-serif;
 
 }
 
 img {
   max-width: 75%;
+  border-top: 8px solid black;
 }
