--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -25,19 +25,34 @@ border-bottom: 1px solid black;
 
 }
 
+a {
+
+  /*color: white;*/
+
+}
+
+a:visited {
+  /*color: white;*/
+}
+
+a:hover {
+  /*color: white;*/
+  text-decoration: underline;
+}
+
 .sauce-title {
 
-  text-align: center;
+  text-align: left;
   font-size: 30px;
   font-style: italic;
-  font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 
 .userinfo {
 
-text-align: center;
+text-align: right;
 font-size: 20px;
-font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
 
 }
 
@@ -45,7 +60,7 @@ font-family: 'Raleway', sans-serif;
 
 text-align: center;
 padding-top: 30px;
-font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
 
 
 }
@@ -53,7 +68,7 @@ font-family: 'Raleway', sans-serif;
 .bookmark-list {
 padding-top: 30px;
 text-align: center;
-font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
 font-size: 20px;
 
 }
@@ -64,7 +79,8 @@ margin: 50px auto;
 font-size: 20px;
 border: 2px solid black;
 width: 80%;
-
+/*color: white;*/
+/*background-color: rgba(48,79,254 ,1)*/
 
 
 }
@@ -73,7 +89,7 @@ width: 80%;
 padding-top: 30px;
 text-align: center;
 font-size: 16px;
-font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
 
 }
 
