--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,7 +4,7 @@
 </div>
 
   <% @bookmarks.each do |bookmark| %>
-
+<a href="<%= bookmark.url %>" target="_blank">
 <div class="row">
 <div class="col s12 m7">
 <div class="card">
@@ -16,9 +16,10 @@
   <p><%= bookmark.summary %></p>
 </div>
 <div class="card-action">
-  <a href="<%= bookmark.url %>" target="_blank">CHECK OUT THIS ARTICLE</a>
+  <a href="<%= bookmark.url %>" target="_blank">Posted by: <%= bookmark.user.first_Name %></a>
 </div>
 </div>
 </div>
 </div>
 <% end %>
+</a>
