--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,7 +2,7 @@
 <div class="forms">
   <%= render 'bookmarks/form' %>
 </div>
-
+<div class="bookmark-center">
   <% @bookmarks.each do |bookmark| %>
 <a href="<%= bookmark.url %>" target="_blank">
 <div class="row">
@@ -10,7 +10,7 @@
 <div class="card">
 <div class="card-image">
   <img src="<%= bookmark.image %>">
-  <span class="card-title"><%= bookmark.title %></span>
+  <span class="card-title #000000 black"><%= bookmark.title %></span>
 </div>
 <div class="card-content">
   <p><%= bookmark.summary %></p>
@@ -23,3 +23,4 @@
 </div>
 <% end %>
 </a>
+</div>
