--- a/app/assets/css/materialize.css
+++ b/app/assets/css/materialize.css
@@ -3,7 +3,10 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+.center-content {
 
+  margin: 0 auto;
+}
 
 .materialize-red.lighten-5 {
   background-color: #fdeaeb !important; }
