--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,25 +13,21 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100italic,300,300italic' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 </head>
-<nav>
+
   <nav>
     <div class="nav-wrapper light-blue darken-4">
-      <a href="#" class="brand-logo">Sauce</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>  <% if current_user %>
-      Signed in as <%= current_user.first_Name %><br>
+      <a href="#" class="brand-logo center">Sauce</a>
+      <div id="nav-mobile" class="right">
+        <% if current_user %>
+      Signed in as <%= current_user.first_Name %> //
       <%= link_to "Log Out", logout_path, :method => :delete %>
       <% else %>
       <%= link_to "Log in", new_session_path %> or <%= link_to "Sign Up", new_user_path %>
-      <% end %></li>
-      </ul>
+      <% end %>
+      </div>
     </div>
   </nav>
 
-<!-- <div class="sauce-title">Sauce!</div> -->
-  <!-- <p class="userinfo"> -->
-<!--  -->
-</nav>
 <body>
    <% if flash[:notice] %>
       <p id="notice"><%= flash[:notice] %></p>
