--- a/app/assets/css/materialize.css
+++ b/app/assets/css/materialize.css
@@ -3,6 +3,12 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+.index-lists{
+
+
+
+}
 .center-content {
 
   margin: 0 auto;
@@ -1707,7 +1713,8 @@ audio:not([controls]) {
  * Remove the gray background color from active links in IE 10.
  */
 a {
-  background-color: transparent; }
+  background-color: transparent;
+  font-size: 40px; }
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
@@ -4788,7 +4795,7 @@ span.badge {
   padding: 0 1.5rem;
   margin: 0 auto;
   max-width: 1280px;
-  width: 90%; }
+  width: 90%;}
 
 @media only screen and (min-width : 601px) {
   .container {
@@ -5157,7 +5164,7 @@ html {
   color: rgba(0, 0, 0, 0.87); }
   @media only screen and (min-width: 0) {
     html {
-      font-size: 14px; } }
+      font-size: 40px; } }
   @media only screen and (min-width: 992px) {
     html {
       font-size: 14.5px; } }
