Trying to add bookmark icon to project.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100italic,300,300italic' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
-  <link rel="apple-touch-icon" href="sauceicon.png"/>
+  <link rel="apple-touch-icon" href="css/sauceicon.png"/>
 </head>
 
   <nav>
