Making changes to nav, styling, UX/UI.

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,7 +6,7 @@
 
   <% @bookmarks.each do |bookmark| %>
 <a href="<%= bookmark.url %>" target="_blank">
-<div class="row">
+<div class="row center-align">
 <div class="col s12 m7">
 <div class="card">
 <div class="card-image">
@@ -22,5 +22,6 @@
 </div>
 
 </div><% end %>
+</div>
 </div>
 </div>
