--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,13 +1,11 @@
-<div class="container">
-  <%= render 'bookmarks/form' %>
-</div>
 
+  <%= render 'bookmarks/form' %>
 
   <% @bookmarks.each do |bookmark| %>
 
 <a href="<%= bookmark.url %>" target="_blank">
 <div class="row center-align">
-<div class="col s12 m7">
+<div class="col s1"></div>
 <div class="card">
 <div class="card-image">
   <img src="<%= bookmark.image %>">
