Made changes to submit button.

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -11,7 +11,7 @@
   <%= f.text_field :description %>
 </div>
 
-<div class="field">
+<div class="input-field center align">
   <%= f.submit "Sauce It!" %>
 </div>
 
