Added 'show' privilige to ensure_logged_in method, so that only logged in users can see lists.

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,6 +12,10 @@
 <div class="actions">
   <%= f.submit %>
 </div>
+<% end %>
+<% @dailylist.each do |dbookmark| %>
+
+<%= dbookmark.title %>
 
 <% end %>
 
