Adding sidebar of lists/index to show page to give better UX.

--- a/app/assets/css/materialize.css
+++ b/app/assets/css/materialize.css
@@ -4,6 +4,10 @@
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
 
+.sidebar {
+
+  border: 2px solid black;
+}
 .center-content {
 
   margin: 0 auto;
