--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,8 @@
 
-
-<h1>Create a new list</h1>
+ <div>
+    <h5 class="center-align">Make a new list</h5>
+ </div>
+        
 
 <%= form_for List.new do |f| %>
 
