--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,7 @@
-<div class="login-form">
-  <h1>Create a new list</h1>
-
+ <div>
+    <h5 class="center-align">Make a new list</h5>
+  </div>
+        
   <%= form_for List.new do |f| %>
 
     <div class="field">
@@ -13,4 +14,3 @@
   </div>
   <% end %>
 
-</div>
