Adding better styling to side nav bar for better UX/UI.

--- a/app/assets/css/materialize.css
+++ b/app/assets/css/materialize.css
@@ -4,6 +4,10 @@
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
 
+
+.listbg {
+  background-color: black;
+}
 .sidebar {
 
   border: 2px solid black;
