--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,12 +2,13 @@
   <%= render 'bookmarks/form' %>
 <div class="row">
 	<div class="col s3">
-	  <div class="card-panel blue accent-2">
+	  <div class="card-panel">
 	<h5><i>Your Lists</i></h5>
 <% @lists.each do |list| %>
-
-  <span class="#c2185b-text text-darken-2"><p><%= link_to list.name, "/lists/#{list.id}" %></p></span>
-	<% end %>
+<div class="card-content white-text">
+<p><%= link_to list.name, "/lists/#{list.id}" %></p>
+</div>
+ <% end %>
 
 	</div>
 </div>
