Fixed display error on lists/show.

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -29,8 +29,8 @@
   <a href="<%= bookmark.url %>" target="_blank">Posted by: <%= bookmark.user.first_Name %> at <i><%= bookmark.created_at.strftime("%I:%M%p %d %b %Y") %></a></i>
 </div>
 </div>
-
-</div><% end %>
+<% end %>
+</div>
 </div>
 </div>
 </div>
