Added better UI/UX to bookmark.description on lists/show.

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,7 +4,7 @@
         
   <%= form_for List.new do |f| %>
 
-    <div class="field">
+    <div class="input-field">
       <%= f.label :name %><br>
       <%= f.text_field :name %>
     </div>
