--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -27,6 +27,7 @@
 </div>
 <div class="card-action">
   <a href="<%= bookmark.url %>" target="_blank">Posted by: <%= bookmark.user.first_Name %> at <i><%= bookmark.created_at.strftime("%I:%M%p %d %b %Y") %></a></i>
+  <p><%= bookmark.user.first_Name %>: <%= bookmark.description %></p>
 </div>
 </div>
 <% end %>
