--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -12,7 +12,7 @@
 
 	</div>
 </div>
-<!-- 
+
 	<div class="col s9">
 		<% @bookmarks.each do |bookmark| %>
 
@@ -34,10 +34,4 @@
 </div>
 </div>
 </div>
-</div> -->
-
-<% @bookmarkslatest.each do |latest| %>
-
-<%= bookmarkslatest.name %>
-
-<% end %>
+</div>
