--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,6 @@
 
   <%= render 'bookmarks/form' %>
+ 
 <div class="row">
 	<div class="col s3">
 	  <div class="card-panel">
@@ -12,6 +13,19 @@
 
 	</div>
 </div>
+
+<% @bookmarkslatest.each do |latest| %>
+
+<%= latest.title %>
+
+<% end %>
+
+
+
+
+
+
+
 
 	<div class="col s9">
 		<% @bookmarks.each do |bookmark| %>
