--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -14,3 +14,24 @@
   </div>
   <% end %>
 
+  <div class="col s9">
+  <% @bookmarks.each do |bookmark| %>
+
+  <a href="<%= bookmark.url %>" target="_blank">
+<div class="card">
+<div class="card-image">
+  <img src="<%= bookmark.image %>">
+  <span class="card-title #000000 black"><%= bookmark.title %></span>
+</div>
+<div class="card-content">
+  <p><%= bookmark.summary %></p>
+</div>
+<div class="card-action">
+  <a href="<%= bookmark.url %>" target="_blank">Posted by: <%= bookmark.user.first_Name %> at <i><%= bookmark.created_at.strftime("%I:%M%p %d %b %Y") %></a></i></a>
+
+</div>
+</div>
+<% end %>
+</div>
+</div>
+
