--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,7 +17,11 @@
 <% end %>
 
 
+
+
 <div class="row center-align">
+<%= link_to 'Latest', "/bookmarks/today" %>
+
 <% @lists.each do |list| %>
 
   <p><%= link_to list.name, "/lists/#{list.id}" %> // <i><%= link_to "Delete", list_path(list), method: :delete, data: {confirm: "Are you sure you want to delete this list?"} %></i></p>
