--- a/app/views/bookmarks/today.html.erb
+++ b/app/views/bookmarks/today.html.erb
@@ -1,6 +1,6 @@
 
 
-<h4>Latest</h4>
+ <h5 class="center-align">Today's Links</h5>
 <div class="row">
 	<div class="col s3">
 	  <div class="card-panel">
